--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
 # Ignore Gradle project-specific cache directory
 .gradle
+gradle/
 
 # Ignore Gradle build output directory
 build
 
-# Ignore Vscode configs
+tmp/
+.DS_Store
+.gitattributes
+
+# Ignore Vscode and Studio configs
+.vscode
+.idea
