--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Ignore Gradle project-specific cache directory
-.gradle
+.gradle/
 gradle/
 
 # Ignore Gradle build output directory
-build
+build/
 
 tmp/
 .DS_Store
