--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignore Gradle project-specific cache directory
 .gradle/
 gradle/
+!gradle/wrapper/gradle-wrapper.properties
 
 # Ignore Gradle build output directory
 build/
