--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Ignore Gradle project-specific cache directory
 .gradle/
-!gradle/wrapper/gradle-wrapper.properties
-
+gradle.properties
+local.properties
 # Ignore Gradle build output directory
 build/
 
