--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@
 
 [versions]
 guava = "33.3.1-jre"
-junit-jupiter-engine = "5.11.1"
-junit-jupiter = "5.8.1"
+#junit-jupiter-engine = "5.11.1"
+#junit-jupiter = "5.8.1"
 
 [libraries]
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
